Changes for 1.0beta13:

 - fixes for screenedit.php (Alexei)
 - added parameter DisablePinger (Alexei)
 - correct processing of RCPT TO responses from SMTP servers
 (Alexei)
 - correct processing of unsupported internal checks (Alexei)
 - processing of DB stopped situations for MySQL (Alexei)
 - housekeeper to delete hosts_groups entries (Alexei)
 - deleted host to be renamed to "<host> [DELETED]"
 (Alexei)
 - added function now() (Alexei)
 - fixed action maintenance screen (Alexei)
 - redesigned availablity chart (Alexei)
 - support for zabbix[trends] (Alexei)
 - added table 'trends' (Alexei)
 - cosmetic changes for IT Services screen (Alexei)
 - change of color schema for SLA graphs and report (Alexei)
 - redesigned IT Service availability chart (Alexei)
 - fix for get_last_service_value(). Thanks to Sebastien
 "Slix" Linard. (Alexei)
 - fix for chart_sla.php. Thanks to Sebastien "Slix"
 Linard. (Alexei)
 - proper timeout handling for SNMP connect (Alexei)

Changes for 1.0beta12:

 - fixed add services (Alexei)
 - fixed simple *_perf checks (Alexei)
 - data.sql was modified to include usrgrp records (Alexei)
 - fixed update of special items 'status'. Thanks to
 Sebastien "Slix" Linard. (Alexei) 
 - fixes for graph time navigation (Alexei)
 - fixed processing of trapped values, fixed pinger. Thanks
 to Sebastien "Slix" Linard. (Alexei) 
 - fixed UserParameter when it replaces existing one. Thanks to
 Sebastien "Slix" Linard. (Alexei) 
 - fixed PostgreSQL schema (Alexei)

Changes for 1.0beta11:

 - added support for user groups (Alexei)
 - added column actions.recipient (Alexei)
 - added support of system[proccount] under Solaris (Alexei) 
 - support for swap sizes >2Gb under Solaris. Thanks to Franky
 Van Liedekerke. (Alexei)
 - add actions when using templates. (Alexei)
 - fixed refresh of status of triggers. (Alexei) 
 - updated RedHat start-up scripts in misc/init.d/redhat. Thanks
 to Charlie. (Alexei)
 - fix for flexible SNMP port name (Alexei)